Add VIP and PYME Profiles
